@@ -7,6 +7,8 @@
 2017-07-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* config.c: better handling of empty/comment only lines
+	* tree.h, tree.c, typeck.c: added explain_operator and used where
+	  appropriate
 
 2017-07-17  Ron Norman <rjn@inglenet.com>
 
